# Kalman

./: .env.example  .gitignore  README.md  backtester.py  closeOpex.py  db.py  email_ibkr.py  ibkr_scanner.py  main.py  mainBinance.py  pyproject.toml  requirements.txt  simulate_live.py  test_connection.py  trades.db  trades_live.db
backtest_cache/: AAPL_1_day.pkl  ABBV_1_day.pkl  ABNB_1_day.pkl  ADBE_1_day.pkl  AFRM_1_day.pkl  AI_1_day.pkl  AMD_1_day.pkl  AMZN_1_day.pkl  ARM_1_day.pkl  AXP_1_day.pkl  BABA_1_day.pkl  BAC_1_day.pkl  BA_1_day.pkl  BBD_1_day.pkl  BLK_1_day.pkl  CAT_1_day.pkl  CCJ_1_day.pkl  CLF_1_day.pkl  COIN_1_day.pkl  COP_1_day.pkl  COST_1_day.pkl  CRM_1_day.pkl  CRWD_1_day.pkl  CVX_1_day.pkl  C_1_day.pkl  DDOG_1_day.pkl  DE_1_day.pkl  EWT_1_day.pkl  EWY_1_day.pkl  EWZ_1_day.pkl  FCX_1_day.pkl  FXI_1_day.pkl  GE_1_day.pkl  GOOG_1_day.pkl  GS_1_day.pkl  HAL_1_day.pkl  HIMS_1_day.pkl  HON_1_day.pkl  HOOD_1_day.pkl  IBKR_1_day.pkl  (+58 more)
config/: dry_run.yaml  live.yaml  paper.yaml  research.yaml
data_cache/: AAPL_12M_4hours_RTH.parquet  AAPL_2M_1day_RTH.parquet  AAPL_2Y_1day_RTH.parquet  AAPL_3M_1day_RTH.parquet  AA_12M_4hours_RTH.parquet  ABBV_12M_4hours_RTH.parquet  ABBV_2M_1day_RTH.parquet  ABBV_2Y_1day_RTH.parquet  ABBV_3M_1day_RTH.parquet  ABNB_12M_4hours_RTH.parquet  ABNB_2M_1day_RTH.parquet  ABNB_2Y_1day_RTH.parquet  ABNB_3M_1day_RTH.parquet  ADBE_12M_4hours_RTH.parquet  ADBE_2M_1day_RTH.parquet  ADBE_2Y_1day_RTH.parquet  ADBE_3M_1day_RTH.parquet  AFRM_12M_4hours_RTH.parquet  AFRM_2M_1day_RTH.parquet  AFRM_2Y_1day_RTH.parquet  AFRM_3M_1day_RTH.parquet  (+490 more)
(+37 files in other folders)
